--- a/20230706slide/slide4(setInterval)/style.css
+++ b/20230706slide/slide4(setInterval)/style.css
@@ -9,80 +9,75 @@ html, body {
   height: 100vh;
 }
 
-li {
-  list-style: none;
-}
-
-.hidden {
-  display: none;
-}
-
-.wrapper {
-  overflow: hidden;
+button {
+  border: none;
+  background-color: transparent;
 }
 
 .slide-list {
-  display: flex;
-  width: 300vw;
+  position: relative;;
+  width: 100%;
   height: 100vh;
-  transition: transform 1s;
+  overflow: hidden;
 }
 
-.slide-list li {
-  width: 100vw;
-  height: 100vh;
+.slide-item {
+  width: 100%;
+  height: 100%;
 }
 
-.slide-item-content {
+.slide-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide-item p {
   position: absolute;
   top: 50%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%,-50%);
-  text-align: center;
-  font-size: 48px;
+  color: white;
+  font-size: 3.2em;
   font-weight: 700;
-  color: #fff;
+  text-align: center;
+  opacity: 0;
 }
 
-
-.slide-btn {
-  position: absolute;
-  top:65%;
-  left:50%;
-  transform: translate(-65%,-50%);
-  display: flex;
-  justify-content: center;
-}
-.slide-btn button {
-  width: 20px;
-  height: 20px;
-  border: 1px solid whitesmoke;
-  border-radius: 50%;
-  background-color: transparent;
-  transition: all 300ms ease-in-out;
-}
-.slide-btn button:not(:last-child) {
-  margin-right: 5px;
-}
-.slide-btn button:hover {
-  background-color: #fff;
-}
-
-
-
-.side-btn button {
+.btn {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 30px;
-  border: none;
-  color:#fff;
-  background-color: transparent;
-  cursor: pointer;
+  color: white;
+  font-size: 48px;
 }
-.left-btn {
-  left: 20px;
+#prev {
+  left: 80px;
 }
-.right-btn {
-  right: 20px;
+#next {
+  right: 80px;
+}
+
+#dots {
+  position: absolute;
+  left: 50%;
+  bottom: 100px;
+  transform: translateX(-50%);
+  display: flex;
+  width: 100px;
+  height: 30px;
+}
+
+#dots div {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  margin-right: 8px;
+}
+#dots div:last-child {
+  margin-right: 0;
+}
+#dots div.is-active {
+  background-color: #fff;
 }
