--- a/Javascript/20230725_이벤트버블링/style.css
+++ b/Javascript/20230725_이벤트버블링/style.css
@@ -10,6 +10,12 @@
 
 .overlay {
   display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
 }
 
 .login-box {
@@ -22,6 +28,7 @@
   height: 380px;
   background-color: #fff;
   box-shadow: 5px 10px 15px rgba(0,0,0,0.5);
+  z-index: 1;
 }
 
 .login-box h4 {
