--- a/Javascript/20230725_이벤트버블링/style.css
+++ b/Javascript/20230725_이벤트버블링/style.css
@@ -4,11 +4,25 @@
   box-sizing: border-box;
 }
 
-.btn-outline-danger {
+/* .btn-outline-danger {
   margin: 30px;
-}
+} */
 
 .overlay {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  visibility: hidden;
+  opacity: 0;
+  padding: 30px;
+  background-color: rgba(0,0,0,0.5);
+}
+.overlay.is-open {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* .overlay {
   display: none;
   position: absolute;
   top: 0;
@@ -16,9 +30,15 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
-}
+} */
 
 .login-box {
+  padding: 30px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+/* .login-box {
   position: fixed;
   top: 10%;
   left: 7%;
@@ -29,12 +49,12 @@
   background-color: #fff;
   box-shadow: 5px 10px 15px rgba(0,0,0,0.5);
   z-index: 1;
-}
+} */
 
-.login-box h4 {
+/* .login-box h4 {
   padding-bottom: 10px;
-}
+} */
 
-.login-box form {
+/* .login-box form {
   padding-bottom: 20px;
-}
+} */
