--- a/Javascript/20230725_이벤트버블링/style.css
+++ b/Javascript/20230725_이벤트버블링/style.css
@@ -10,14 +10,18 @@
 
 .overlay {
   position: fixed;
+  /* 좌표로 등장하게 할 때 */
+  /* top: -100vw; */
   width: 100%;
   height: 100vh;
   visibility: hidden;
   opacity: 0;
   padding: 30px;
   background-color: rgba(0,0,0,0.5);
+  transition: all 500ms ease-in-out;
 }
 .overlay.is-open {
+  /* top: 0; */
   visibility: visible;
   opacity: 1;
 }
