--- a/20230726네이버회원가입/style.css
+++ b/20230726네이버회원가입/style.css
@@ -5,148 +5,49 @@
 }
 
 a {
-  color: black;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-}
-
-header {
-  max-width: 768px;
-  position: relative;
-}
-
-.wrapper {
-  width: 500px;
-}
-
-.logo {
-  margin: 50px 0;
-  text-align: center;
-}
-.logo img {
-  width: 300px;
-}
-
-#nation {
-  position: absolute;
-  top: 20%;
-  right: 0;
-}
-
-main {
-  display: flex;
-  justify-content: center;
-}
-
-section {
-  max-width: 460px;
-  position: relative;
-}
-
-
-.checker-wrap input[type=checkbox] {
-  display:none;
-}
-.checker-wrap input[type=checkbox] + label { 
-  cursor: pointer; 
-  width: 24px;
-  height: 24px;
-  padding-left: 23px; 
-  background-repeat: no-repeat;
-  background-image: url(./images/pc_check_off_24.png);
-}
-.checker-wrap input[type=checkbox]:checked + label {
-  width: 24px;
-  height: 24px;
-  background-image: url(./images/pc_check_on_l_24.png);
-}
-.checker-wrap input[type=checkbox]:disabled + label {
-  width: 24px;
-  height: 24px;
-  background-image: url(./images/pc_check_off_24.png);
-}
-
-
-input[type=checkbox] {
-  display:none;
-}
-input[type=checkbox] + label { 
-  cursor: pointer; 
-  width: 24px;
-  height: 24px;
-  padding-left: 23px; 
-  background-repeat: no-repeat;
-  background-image: url(./images/pc_chcek_off_s_20.png);
-}
-input[type=checkbox]:checked + label {
-  width: 24px;
-  height: 24px;
-  background-image: url(./images/pc_chcek_on_s_20.png);
-}
-input[type=checkbox]:disabled + label {
-  width: 24px;
-  height: 24px;
-  background-image: url(./images/pc_chcek_off_s_20.png);
-}
-
-
-.checker-wrap a {
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.green {
-  color: #08A600;
-}
-.gray {
-  color: gray;
-}
-.text-size {
-  font-size: 18px;
-}
-.text-box {
-  height: 120px;
-  margin: 20px auto;
-  padding: 16px;
-  overflow-y: scroll;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: gray;
-}
-.text-box p {
-  font-weight: 700;
-  padding-bottom: 10px;
-}
-
-.btn-wrap {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
-  margin-bottom: 10px;
-}
-
-.btn-wrap button {
-  width: 49%;
-  height: 60px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  background-color: #08A600;
-  cursor: pointer;
-}
-
-.join-us-text {
-  text-align: center;
-  padding-bottom: 20px;
-}
-.join-us-text p {
-  font-size: 15px;
-}
-.join-us-text p > a {
-  color: #b9b9b9;
+  color: #333;
   text-decoration: none;
 }
+
+li {
+  list-style: none;
+}
+
+.global-header {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 768px;
+  margin: 50px auto;
+}
+
+.logo img {
+  width: 240px;
+}
+
+.lang {
+  position: absolute;
+  right: 10px;
+}
+
+.join-form {
+  max-width: 460px;
+  margin: 0 auto;
+}
+
+section label {
+  display: flex;
+}
+
+label input[type='checkbox'] {
+  /* display:none; */
+}
+
+.total .checkbox-img {
+  width: 24px;
+  height: 24px;
+  background-image: url(./images/pc_check_off_24.png);
+}
+
+
