--- a/20230811_카드뒤집기효과/style.css
+++ b/20230811_카드뒤집기효과/style.css
@@ -8,130 +8,67 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: black;
   color: white;
 }
 
-
+.card {
+  width: 500px;
+  height: 300px;
+  cursor: pointer;
+}
 
 .card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
   perspective : 1000px;
   transform-style: preserve-3d;
 }
 
-.item {
-  backface-visibility: hidden;
-  transition: 1s;
-}
-
-.card:hover .front {
-  transform: rotateY(-180deg);
-}
-.card .back {
-  transform: rotateY(180deg);
-}
-.card:hover .back {
-  transform: rotateY(0deg);
-}
-
-
-
-
-
-
-.front {
-  width: 600px;
-  height: 400px;
-  border-radius: 20px;
-  background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+.front,
+.back {
   position: absolute;
-}
-
-.map-img {
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  z-index: 1;
+  padding: 20px 30px;
+  background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+  border-radius: 15px;
+  /* 뒤집힌 면 visible & hidden */
+  backface-visibility: hidden;
+}
+
+
+.back {
+  transform: rotateY(180deg);
 }
 
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 40px;
-  position: relative;
-  z-index: 10;
 }
 
-.front > .row > img:nth-of-type(1) {
-  height: 80px;
-}
-.front > .row > img:nth-of-type(2) {
+.map-img {
   width: 100px;
-  height: 40px;
 }
 
-.card-num {
-  padding-top: 60px;
-  font-size: 32px;
+.logo {
+  width: 80px;
 }
 
-.card-holder {
-  padding-bottom: 10px;
-  font-size: 18px;
-}
-
-.card-name {
-  padding-top: 0;
-  font-size: 24px;
-}
-
-
-
-.back {
-  width: 600px;
-  height: 400px;
-  border-radius: 20px;
-  background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
-  position: relative;
-}
-
-.bar {
-  height: 60px;
-  background-color: black;
-  position: relative;
-  top: 30px;
-  z-index: 100;
-}
-
-.card-cvv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.card-cvv p {
-  padding: 10px;
-  color: black;
-  background-color: #fff;
-  font-size: 28px;
-}
 .card-cvv img {
-  width: 470px;
-}
-
-.card-text {
-  font-size: 18px;
-}
-
-.card-sig {
-  padding-top: 0;
-}
-
-.card-sig img {
   width: 100px;
-  height: 40px;
 }
+
+
+
+
+
+
+
+
