--- a/20230811_카드뒤집기효과/style.css
+++ b/20230811_카드뒤집기효과/style.css
@@ -33,6 +33,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   padding: 20px 30px;
@@ -54,11 +55,35 @@
 }
 
 .map-img {
-  width: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: .3;
+  z-index: -1;
 }
 
-.logo {
+.chip-img {
+  width: 60px;
+}
+
+.logo-img {
   width: 80px;
+}
+
+.card-num {
+  font-size: 35px;
+  margin-top: 60px;
+}
+
+.card-holder {
+  font-size: 12px;
+  margin-top: 40px;
+}
+
+.card-name {
+  font-size: 22px;
+  margin-top: 10px;
 }
 
 .card-cvv img {
