--- a/20230811_카드뒤집기효과/style.css
+++ b/20230811_카드뒤집기효과/style.css
@@ -18,15 +18,23 @@
   width: 500px;
   height: 300px;
   cursor: pointer;
+  /* 원근법 : perspective 수가 커질수록 멀리서 보는 느낌 */
+  perspective : 1000px;
 }
 
 .card-inner {
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
-  perspective : 1000px;
+  transition: transform 1s;
   transform-style: preserve-3d;
 }
+  
+
+.card:hover .card-inner {
+  transform: rotateY(-180deg);
+}
+    
 
 .front,
 .back {
@@ -86,8 +94,39 @@
   margin-top: 10px;
 }
 
+.bar {
+  height: 60px;
+  background-color: #222;
+  margin-left: -30px;
+  margin-right: -30px;
+}
+
+.card-cvv {
+  margin-top: 20px;
+}
+
 .card-cvv img {
-  width: 100px;
+  /* container 안에 공간이 남을 경우
+  flex-grow 속성으로 남는 공간 차지 
+  flow-grow 디폴트 값 = 0 / 음수 설정 x */
+  flex-grow: 1;
+  height: 50px;
+}
+
+.card-cvv p {
+  padding: 10px;
+  font-size: 22px;
+  color: #000;
+  background-color: #fff;
+}
+
+.card-text {
+  font-size: 14px;
+}
+
+.card-text,
+.card-sig {
+  margin-top: 30px;
 }
 
 
