--- a/20230814_JS_Clock/style.css
+++ b/20230814_JS_Clock/style.css
@@ -1,12 +1,17 @@
+@font-face {
+  font-family: Orbitron;
+  src : url('./fonts/Orbitron-Regular.eot');
+  src : url('./fonts/Orbitron-Regular.woff') format('woff');
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Orbitron, sans-serif;
 }
 
 a {
-  color: black;
+  color: #555;
   text-decoration: none;
 }
 
@@ -14,6 +19,31 @@ li {
   list-style: none;
 }
 
-.visually-hidden {
-  display: none;
+body {
+  font-family: Orbitron, sans-serif;
 }
+
+.wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+/* 배경화면 class */
+
+.wrapper.morning {
+  background-image: url(./images/bg_morning.jpg);
+}
+.wrapper.afternoon {
+  background-image: url(./images/bg_afternoon.jpg);
+}
+.wrapper.evening {
+  background-image: url(./images/bg_evening.jpg);
+}
+.wrapper.night {
+  background-image: url(./images/bg_night.jpg);
+}
+
